[gd_scene load_steps=22 format=2]

[ext_resource path="res://core/singleton/VideoRenderServer.gd" type="Script" id=1]
[ext_resource path="res://core/gui/popup/notification.gd" type="Script" id=2]
[ext_resource path="res://core/font/DejaVuSans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://core/gui/render_settings/RenderSettings.tscn" type="PackedScene" id=4]
[ext_resource path="res://core/gui/render_settings/render_directory_select.gd" type="Script" id=5]
[ext_resource path="res://core/gui/render_settings/batch_render_add_dialog.gd" type="Script" id=6]
[ext_resource path="res://core/gui/watermark/Watermark.tscn" type="PackedScene" id=7]
[ext_resource path="res://core/gui/playback/Playback.gd" type="Script" id=8]
[ext_resource path="res://core/font/default24.tres" type="DynamicFont" id=9]
[ext_resource path="res://core/singleton/TimeSlider.gd" type="Script" id=10]
[ext_resource path="res://core/singleton/PresciseSubSeeking.gd" type="Script" id=11]
[ext_resource path="res://core/gui/stylebox/playback_panel.tres" type="StyleBox" id=12]
[ext_resource path="res://core/gui/playback/scene_path.gd" type="Script" id=13]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 32.0
content_margin_right = 32.0
content_margin_top = 24.0
content_margin_bottom = 24.0
bg_color = Color( 0.121569, 0.129412, 0.160784, 0.396078 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 3

[sub_resource type="Theme" id=3]
default_font = ExtResource( 9 )
PanelContainer/styles/panel = SubResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
outline_size = 3
outline_color = Color( 0.156863, 0.176471, 0.203922, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 2.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0.729412 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.176471, 0.196078, 0.211765, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
expand_margin_top = 4.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 5.0
content_margin_bottom = 2.0
bg_color = Color( 0.172549, 0.164706, 0.164706, 0.403922 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.117647, 0.12549, 0.129412, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.819608 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0.203922 )
border_width_left = 2
border_width_right = 2
border_color = Color( 1, 1, 1, 0.568627 )

[node name="VideoRenderServer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Watermark" type="Node" parent="."]

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hb" type="HBoxContainer" parent="GUI/Layout"]
margin_right = 1920.0
margin_bottom = 35.0

[node name="HSeparator" type="HSeparator" parent="GUI/Layout/hb"]
margin_right = 1837.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Close" type="Button" parent="GUI/Layout/hb"]
margin_left = 1841.0
margin_right = 1920.0
margin_bottom = 35.0
text = "Close"

[node name="sc" type="ScrollContainer" parent="GUI/Layout"]
margin_top = 39.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_clip_content = false
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Menu" type="TabContainer" parent="GUI/Layout/sc"]
margin_right = 1920.0
margin_bottom = 1041.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_bg = Color( 1, 1, 1, 1 )
custom_colors/font_color_fg = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/tab_fg = SubResource( 4 )
custom_styles/tab_bg = SubResource( 5 )
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playback" type="VBoxContainer" parent="GUI/Layout/sc/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 39.0
alignment = 2
script = ExtResource( 8 )

[node name="PanelContainer" type="PanelContainer" parent="GUI/Layout/sc/Menu/Playback"]
margin_top = 929.0
margin_right = 1920.0
margin_bottom = 1002.0
rect_clip_content = true
custom_styles/panel = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Layout/sc/Menu/Playback/PanelContainer"]
margin_right = 1920.0
margin_bottom = 73.0

[node name="scene_path" type="Label" parent="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 29.0
text = "arsars"
align = 1
autowrap = true
script = ExtResource( 13 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 1920.0
margin_bottom = 73.0
custom_constants/separation = 0

[node name="Button" type="Button" parent="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 141.0
margin_bottom = 40.0
text = "Play/Pause"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 141.0
margin_right = 1562.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 9 )
max_value = 1.0
value = 0.5
percent_visible = false
script = ExtResource( 10 )
gui_path = NodePath("../../../../../../../..")

[node name="Button" type="Button" parent="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer/HBoxContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresciseSubSeeking" type="CheckButton" parent="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 1562.0
margin_right = 1920.0
margin_bottom = 40.0
text = "Prescise animation clip"
flat = true
script = ExtResource( 11 )

[node name="Render" parent="GUI/Layout/sc/Menu" instance=ExtResource( 4 )]
visible = false

[node name="Watermark" parent="GUI/Layout/sc/Menu" instance=ExtResource( 7 )]
visible = false

[node name="Popup" type="Control" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notification" type="AcceptDialog" parent="GUI/Popup"]
margin_left = 782.226
margin_top = 500.726
margin_right = 1017.23
margin_bottom = 626.726
popup_exclusive = true
dialog_autowrap = true
script = ExtResource( 2 )

[node name="render_directory" type="FileDialog" parent="GUI/Popup"]
margin_left = 520.909
margin_top = 277.972
margin_right = 1446.91
margin_bottom = 920.972
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a Directory"
mode = 2
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/tmp"
current_path = "/tmp/"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="batch_render_add" type="FileDialog" parent="GUI/Popup"]
margin_left = 479.785
margin_top = 365.782
margin_right = 1248.79
margin_bottom = 852.782
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open File(s)"
mode = 1
filters = PoolStringArray( "*.tscn" )
current_dir = "res://projects"
current_path = "res://projects/"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="watermark_add" type="FileDialog" parent="GUI/Popup"]
margin_left = 508.0
margin_top = 227.0
margin_right = 1373.0
margin_bottom = 786.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open File(s)"
mode = 1
filters = PoolStringArray( "*.tscn", "*.scn" )
current_dir = "res://projects"
current_path = "res://projects/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="GUI" to="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer/HBoxContainer/ProgressBar" method="_on_GUI_visibility_changed"]
[connection signal="pressed" from="GUI/Layout/hb/Close" to="." method="_on_Close_pressed"]
[connection signal="tab_changed" from="GUI/Layout/sc/Menu" to="GUI/Layout/sc/Menu/Playback" method="_on_Menu_tab_changed"]
[connection signal="gui_input" from="GUI/Layout/sc/Menu/Playback" to="GUI/Layout/sc/Menu/Playback" method="_on_Playback_gui_input"]
[connection signal="pressed" from="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer/HBoxContainer/PresciseSubSeeking" to="GUI/Layout/sc/Menu/Playback/PanelContainer/VBoxContainer/HBoxContainer/PresciseSubSeeking" method="_on_PresciseSubSeeking_toggled"]
[connection signal="add_queued_scene" from="GUI/Layout/sc/Menu/Render" to="GUI/Popup/batch_render_add" method="_on_RenderSettings_add_queued_scene"]
[connection signal="batch_rendering_requested" from="GUI/Layout/sc/Menu/Render" to="." method="_on_RenderSettings_batch_rendering_requested"]
[connection signal="rendering_requested" from="GUI/Layout/sc/Menu/Render" to="." method="_on_RenderSettings_rendering_requested"]
[connection signal="select_render_dir" from="GUI/Layout/sc/Menu/Render" to="GUI/Popup/render_directory" method="_on_RenderSettings_select_render_dir"]
[connection signal="set_thread" from="GUI/Layout/sc/Menu/Render" to="." method="_on_Render_set_thread"]
[connection signal="request_add_watermark" from="GUI/Layout/sc/Menu/Watermark" to="GUI/Popup/watermark_add" method="popup_centered"]
[connection signal="files_selected" from="GUI/Popup/batch_render_add" to="GUI/Layout/sc/Menu/Render" method="_on_batch_render_add_files_selected"]
[connection signal="files_selected" from="GUI/Popup/watermark_add" to="GUI/Layout/sc/Menu/Watermark" method="_on_watermark_add_files_selected"]
